# robot

./: README.md
armrobot-main/src/learn_moveit/launch/: hello_moveit.launch.py
armrobot-main/src/learn_moveit/src/: moveit_demo1.cpp
armrobot-main/src/panda_robot/panda_configure/config/: moveit.rviz  moveit_controllers.yaml  panda.srdf
learn_moveit/: CMakeLists.txt  package.xml
learn_moveit/src/: hello_moveit.cpp
panda_robot/panda_configure/: .setup_assistant  CMakeLists.txt  package.xml
panda_robot/panda_configure/launch/: move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py
panda_robot/panda_description/urdf/: panda.urdf.xacro
robot/: CMakeLists.txt  package.xml
robot/config/: display_robot_model.rviz  ros2_controller.yaml
robot/gazebo/: new_world.world
robot/gazebo/new_big_room/: model.config  model.sdf
robot/launch/: display_robot.launch.py  gazebo_sim.launch.py
robot/urdf/learn/: robot.urdf  robot.xacro
robot/urdf/project_robot/: base.urdf.xacro  common_inertial.xacro  robot.urdf.xacro  ros2_control.xacro
robot/urdf/project_robot/actuator/: caster.urdf.xacro  wheel.urdf.xacro
robot/urdf/project_robot/plugins/: gazebo_control_plugin.xacro  gazebo_sensor_plugin.xacro
robot/urdf/project_robot/sensor/: camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
robot_navigation2/: CMakeLists.txt  package.xml
robot_navigation2/config/: nav2_params.yaml
robot_navigation2/launch/: navigation2.launch.py
robot_navigation2/maps/: room.pgm  room.yaml
(+4 files in other folders)
